# fc3

./: .gitignore  CMakeLists.txt  README.md
CMake/: Output.hpp.in  sets.cmake
cfl/: Approx.hpp  CMakeLists.txt  Error.hpp  Fit.hpp  Function.hpp  GaussRollback.hpp  Ind.hpp  Index.hpp  Interp.hpp  Macros.hpp
cfl/Inline/: iApprox.hpp  iError.hpp  iFit.hpp  iFunction.hpp  iInd.hpp  iInterp.hpp
cfl/Src/: Approx.cpp  Error.cpp  Fit.cpp  Function.cpp  GaussRollback.cpp  Ind.cpp  Interp.cpp
prb/: Approx.hpp  CMakeLists.txt  Data.hpp  Fit.hpp  GaussRollback.hpp  Ind.hpp  Index.hpp  Interp.hpp
prb/Src/: Approx.cpp  Data.cpp  Fit.cpp  GaussRollback.cpp  Ind.cpp  Interp.cpp
test/: Approx.hpp  CMakeLists.txt  Data.hpp  Fit.hpp  GaussRollback.hpp  Ind.hpp  Index.hpp  Interp.hpp  Main.hpp  Output.hpp  Output.hpp.in
test/Inline/: iMain.hpp
test/Src/: Approx.cpp  Data.cpp  Fit.cpp  GaussRollback.cpp  Ind.cpp  Interp.cpp  Main.cpp
test_cfl/: CMakeLists.txt  Main.hpp  Output.hpp
test_cfl/Src/: Function.cpp  Main.cpp
test_prb/: CMakeLists.txt  Main.hpp
test_prb/Src/: Approx.cpp  Data.cpp  Fit.cpp  GaussRollback.cpp  Ind.cpp  Interp.cpp  Main.cpp
test_set1/: CMakeLists.txt  Output.hpp
test_set1/Src/: Main.cpp
test_set10/: CMakeLists.txt
test_set10/Src/: Main.cpp
test_set2/: CMakeLists.txt  Output.hpp
test_set2/Src/: Main.cpp
test_set3/: CMakeLists.txt  Output.hpp
test_set3/Src/: Main.cpp
test_set4/: CMakeLists.txt  Output.hpp
test_set4/Src/: Main.cpp
test_set5/: CMakeLists.txt  Output.hpp
test_set5/Src/: Main.cpp
test_set6/: CMakeLists.txt  Output.hpp
test_set6/Src/: Main.cpp
test_set7/: CMakeLists.txt
test_set7/Src/: Main.cpp
test_set8/: CMakeLists.txt
test_set8/Src/: Main.cpp
test_set9/: CMakeLists.txt
test_set9/Src/: Main.cpp
